fix overflow issue

--- a/app/assets/css/globals.css
+++ b/app/assets/css/globals.css
@@ -1,6 +1,8 @@
 @import "tailwindcss";
 @custom-variant dark (&:where(.dark, .dark *));
-
+html, body {
+  overflow-x: hidden;
+}
 /*
   The default border color has changed to `currentColor` in Tailwind CSS v4,
   so we've added these compatibility styles to make sure everything still
